<resources>
    <string name="app_name">Ecommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_carrinho">Carrinho</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_produtos">Produtos</string>
    <string name="menu_categorias">Categorias</string>
    <string name="menu_config">Config</string>

    <string name="valor_produto"> R$ %1$s</string>
    <string name="total_produto">TOTAL: R$ %1$s</string>
    <string name="valor_striked"> <strike> R$ %1$s </strike> </string>
    <string name="status_pedido">Pedido %1$s</string>
</resources>