<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_usuario"
    app:startDestination="@id/menu_home">

    <fragment
        android:id="@+id/menu_home"
        android:name="com.example.ecommerce.fragment.usuario.HomeUsuarioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home_usuario" />
    <fragment
        android:id="@+id/menu_pedidos"
        android:name="com.example.ecommerce.fragment.usuario.PedidosUsuarioFragment"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_pedidos_usuario" />
    <fragment
        android:id="@+id/menu_carrinho"
        android:name="com.example.ecommerce.fragment.usuario.CarrinhoUsuarioFragment"
        android:label="@string/menu_carrinho"
        tools:layout="@layout/fragment_carrinho_usuario" />
    <fragment
        android:id="@+id/menu_favoritos"
        android:name="com.example.ecommerce.fragment.usuario.FavoritosUsuarioFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favoritos_usuario" />
    <fragment
        android:id="@+id/menu_perfil"
        android:name="com.example.ecommerce.fragment.usuario.PerfilUsuarioFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil_usuario" />
</navigation>